--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
+        "@ttskch/select2-bootstrap4-theme": "^1.4.0",
         "bootstrap": "^4.5.0",
         "jquery": "^3.5.1",
         "jquery.easing": "^1.4.1",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "select2": "^4.0.13"
     }
 }
