--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfonycasts/verify-email-bundle": "^1.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
